--- a/style.css
+++ b/style.css
@@ -10,3 +10,34 @@
     font-size: 16px;
     padding: 0px 5px;
 }
+.cardbody{
+    padding: 2px 16px;
+}
+.cardfooter{
+    padding: 8px;
+    background-color: beige;
+    display: flex;
+    justify-content: right;
+}
+.card:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0, 0.2);
+}
+
+label{
+    font-size: 14px;
+    font-weight: bold;
+}
+input[type=text]{
+    width: 90%;
+    padding: 10px;
+    margin: 8px 10px;
+}
+.btn1{
+    border: none;
+    border-radius: 8px;
+    background-color: green;
+    color:white;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 8px 20px;
+}
