Hitung Luas dan Keliling Persegi

--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ input[type=text]{
     font-weight: bold;
     padding: 8px 20px;
 }
+.hsl{
+    font-size: 14px;
+    margin: 10px;
+    height: 200px;
+    width: 90%;
+    border: solid #C0C0C0 1px;
+    padding: 10px;
+    background-color: #c5C5C5;
+}
